Add annotation to controller specifying class which is used for sorting