@@ -56,7 +56,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.security.Principal;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/place")
@@ -237,7 +236,7 @@ public class PlaceController {
             content = @Content(examples = @ExampleObject(HttpStatuses.NOT_FOUND)))
     })
     @GetMapping("/{status}")
-    @ApiPageable
+    @ApiPageable(clazz = AddPlaceDto.class)
     public ResponseEntity<PageableDto<AdminPlaceDto>> getPlacesByStatus(
         @PathVariable PlaceStatus status,
         @Parameter(hidden = true) Pageable pageable) {
@@ -353,7 +352,7 @@ public class PlaceController {
             content = @Content(examples = @ExampleObject(HttpStatuses.NOT_FOUND)))
     })
     @PostMapping("/filter/predicate")
-    @ApiPageable
+    @ApiPageable(clazz = AddPlaceDto.class)
     public ResponseEntity<PageableDto<AdminPlaceDto>> filterPlaceBySearchPredicate(
         @Valid @RequestBody FilterPlaceDto filterDto,
         @Parameter(hidden = true) Pageable pageable) {
@@ -453,7 +452,7 @@ public class PlaceController {
      * The method which delete array of {@link PlaceVO}'s from DB(change
      * {@link PlaceStatus} to DELETED).
      *
-     * @param ids - list of id's of {@link PlaceVO}'s, splited by "," which need to
+     * @param ids - list of id's of {@link PlaceVO}'s, split by "," which need to
      *            be deleted
      * @return count of deleted {@link PlaceVO}'s
      */
@@ -473,7 +472,7 @@ public class PlaceController {
             required = true) @RequestParam String ids) {
         return ResponseEntity.status(HttpStatus.OK).body(placeService.bulkDelete(Arrays.stream(ids.split(","))
             .map(Long::valueOf)
-            .collect(Collectors.toList())));
+            .toList()));
     }
 
     /**
@@ -522,7 +521,7 @@ public class PlaceController {
         @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST,
             content = @Content(examples = @ExampleObject(HttpStatuses.BAD_REQUEST))),
     })
-    @ApiPageable
+    @ApiPageable(clazz = AddPlaceDto.class)
     @GetMapping("all")
     public ResponseEntity<PageableDto<AdminPlaceDto>> getAllPlaces(@Parameter(hidden = true) Pageable page,
         @Parameter(hidden = true) Principal principal) {
